--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "reconnectingWebsocket",
+  "name": "reconnecting-websocket",
   "main": "reconnecting-websocket.js",
   "version": "1.0.0",
   "homepage": "https://github.com/joewalnes/reconnecting-websocket",
