--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReconnectingWebSocket",
+  "name": "reconnecting-websocket",
   "version": "1.0.0",
   "description": "A small JavaScript library that decorates the WebSocket API to provide a WebSocket connection that will automatically reconnect if the connection is dropped.",
   "main": "reconnecting-websocket.js",
